Section header responsive tweak to fix overflow issue

--- a/assets/src/sass/base/_grid.scss
+++ b/assets/src/sass/base/_grid.scss
@@ -28,7 +28,6 @@ $break_mobile_small  : max-width 320px;
 body {
   background-color: $white;
   color: $black;
-  overflow-x: hidden;
 
   &.noscroll {
     overflow: hidden;
